--- a/samples/CSharpWCF/reference/projects/csharpwcfapp/CSharpWCFApp.vs2015.v4_5_2.csproj
+++ b/samples/CSharpWCF/reference/projects/csharpwcfapp/CSharpWCFApp.vs2015.v4_5_2.csproj
@@ -100,14 +100,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.svc.cs" />
+    <Compile Include="..\..\codebase\CSharpWCFApp\IService1.cs">
+      <Link>IService1.cs</Link>
+    </Compile>
+    <Compile Include="..\..\codebase\CSharpWCFApp\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\codebase\CSharpWCFApp\Service1.svc.cs">
+      <Link>Service1.svc.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Web.Debug.config" />
-    <None Include="Web.Release.config" />
-    <None Include="Web.config" />
+    <None Include="..\..\codebase\CSharpWCFApp\Web.Debug.config">
+      <Link>Resources\Web.Debug.config</Link>
+    </None>
+    <None Include="..\..\codebase\CSharpWCFApp\Web.Release.config">
+      <Link>Resources\Web.Release.config</Link>
+    </None>
+    <None Include="..\..\codebase\CSharpWCFApp\Web.config">
+      <Link>Resources\Web.config</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
