Fixed Sharpmake resolver for extended platform names
* also fixed the project dependency of samples projects to depend on Sharpmake.Application

--- a/Sharpmake.FunctionalTests/Sharpmake.FunctionalTests.csproj
+++ b/Sharpmake.FunctionalTests/Sharpmake.FunctionalTests.csproj
@@ -10,4 +10,8 @@
     <None Include="**/*" Exclude="Sharpmake.FunctionalTests.csproj;obj/**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sharpmake.Application\Sharpmake.Application.csproj" />
+  </ItemGroup>
+
 </Project>
