--- a/samples/Samples.csproj
+++ b/samples/Samples.csproj
@@ -16,9 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sharpmake\Sharpmake.csproj" />
-    <ProjectReference Include="..\Sharpmake.Platforms\Sharpmake.CommonPlatforms\Sharpmake.CommonPlatforms.csproj" />
-    <ProjectReference Include="..\Sharpmake.Generators\Sharpmake.Generators.csproj" />
+    <ProjectReference Include="..\Sharpmake.Application\Sharpmake.Application.csproj" />
   </ItemGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
