organized the platform names into simple static strings and toolchain-specific getters as discussed during the 2024-02-16 Sharpmake sync meeting corrected obsolete message for Util.GetPlatformString removed the private readonly static strings following discussion with Paul Baudron handled the ctr Platform field question following discussion with JSP fixed Win32's visual studio platform name; quite unbelievable it was wrong all this time initial adjustments based on regression tests first pass of regression test reference updates updated CSharpWCF reference files fixed samples update script and last regression references updated dotnet and macOS paths in SamplesDef.json fixed a bad copyright header fixed  hash values in unit test HashUnityResolver attempt at fixing HelloXcode with proper platform names adjusted dockerfile for HelloLinux added Target.ToolchainPlatform so we can resolve [target.ToolchainPlatform] fixed wrong type of platform name injected in vcxproj templates revert DotNetPlatform to "anycpu" simple name, robustified MSBuild global settings; too many diffs in Anvil for not much benefit updated regression test references (back to anycpu) updated BffUnityResolverTest hashes fixed comments as suggested by JSP reverted change to bff compiler section name updated script files in Sharpmake.sln

--- a/samples/HelloLinux/Dockerfile
+++ b/samples/HelloLinux/Dockerfile
@@ -26,7 +26,7 @@ COPY --from=sharpmake-env samples/HelloLinux samples/HelloLinux
 
 # Sample C++ compilation.
 WORKDIR /samples/HelloLinux/codebase/temp/solutions
-RUN make -f HelloLinux_linux_make.make config=$CONFIGURATION
+RUN make -f HelloLinux_Linux_make.make config=$CONFIGURATION
 
 # Last stage is the container app that will executed.
 # Its based on PowerShell image and contains binaries and scripts required to execute HelloLinux sample.
