multiframework fix for swapped references

--- a/samples/NetCore/DotNetOSMultiFrameworksHelloWorld/reference/codebase/helloworldlib/HelloWorldLib.vs2022.csproj
+++ b/samples/NetCore/DotNetOSMultiFrameworksHelloWorld/reference/codebase/helloworldlib/HelloWorldLib.vs2022.csproj
@@ -12,13 +12,16 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <PropertyGroup>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)|$(TargetFramework)'=='Debug|AnyCPU|net472'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\temp\bin\anycpu_debug</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldlib</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_debug_v4_7_2</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldlib_v4_7_2</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,8 +32,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\temp\bin\anycpu_debug</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldlib</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_debug_net6_0</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldlib_net6_0</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -41,8 +44,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\temp\bin\anycpu_release</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldlib</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_release_v4_7_2</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldlib_v4_7_2</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -53,8 +56,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\temp\bin\anycpu_release</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldlib</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_release_net6_0</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldlib_net6_0</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
