--- a/samples/NetCore/DotNetOSMultiFrameworksHelloWorld/reference/codebase/helloworldmultiframeworks/HelloWorldExe.vs2022.csproj
+++ b/samples/NetCore/DotNetOSMultiFrameworksHelloWorld/reference/codebase/helloworldmultiframeworks/HelloWorldExe.vs2022.csproj
@@ -12,13 +12,16 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <PropertyGroup>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)|$(TargetFramework)'=='Debug|AnyCPU|net472'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\temp\bin\anycpu_debug</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_debug_v4_7_2</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe_v4_7_2</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,8 +32,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\temp\bin\anycpu_debug</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_debug_net6_0</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe_net6_0</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -41,8 +44,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\temp\bin\anycpu_debug</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_debug_net6_0_windows</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_debug\helloworldexe_net6_0_windows</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -53,8 +56,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\temp\bin\anycpu_release</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_release_v4_7_2</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe_v4_7_2</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -65,8 +68,8 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\temp\bin\anycpu_release</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_release_net6_0</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe_net6_0</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -77,14 +80,35 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\temp\bin\anycpu_release</OutputPath>
-    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe</IntermediateOutputPath>
+    <OutputPath>..\temp\bin\anycpu_release_net6_0_windows</OutputPath>
+    <IntermediateOutputPath>..\temp\obj\anycpu_release\helloworldexe_net6_0_windows</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>5</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+  <ItemGroup Condition="'$(TargetFramework)'=='net472'">
+    <Reference Include="HelloWorldSwappedLib-net472">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\temp\bin\anycpu_release_v4_7_2\HelloWorldSwappedLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net6.0'">
+    <Reference Include="HelloWorldSwappedLib-net6.0">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\temp\bin\anycpu_release_net6_0\HelloWorldSwappedLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net6.0-windows'">
+    <Reference Include="HelloWorldSwappedLib-net6.0-windows">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\temp\bin\anycpu_release_net6_0_windows\HelloWorldSwappedLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
