--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -1,17 +1,9 @@
+# Pipelines runs only on branches and tags.
+# Disable merge request pipelines, pipelines for merge results and merge trains.
 include:
+  - template: 'Workflows/Branch-Pipelines.gitlab-ci.yml'
   - project: 'Sharpmake/SharpmakeExtended'
     file: 'build/sharpmake-ci.yml'
-
-workflow:
-  rules:
-    # Enable merge request pipelines.
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    # Avoid duplicate pipelines when pushing in a branch.
-    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
-      when: never
-    # Else run pipelines for branches and tags.
-    - if: $CI_COMMIT_BRANCH
-    - if: $CI_COMMIT_TAG
 
 stages:
   - build
